# MatchingCard

./: .gitignore  CMakeLists.txt  README.md
docs/: MatchCard.html  MatchCard.js  MatchCard.wasm  build.bat  index.html
raylib-master/cmake/: PackConfigurations.cmake
res/: CMakeLists.txt  all_res.hpp  buildres.sh  main.cpp
res/c/: Gojo.h  Jujutsu_Kaisen.h  Naruto.h  Sasuke_Uchiha.h  XX.h  boruto.h  evolved_garou.h  geto_young_manga.h  itachi.h  obito_naruto_akatsuki.h  refresh_icon.h  sakura_boruto.h
res/c/audio/: click.h  good.h  wrong.h
res/c/img/cards/: Gojo.h  Jujutsu_Kaisen.h  Naruto.h  Sasuke_Uchiha.h  boruto.h  evolved_garou.h  geto_young_manga.h  itachi.h  obito_naruto_akatsuki.h  sakura_boruto.h
res/c/img/ui/: XX.h  icon.h  menu_bar.h  menu_bar_optimized.h  refresh_icon.h
src/: Res.hpp  main.cpp
wbuild/: MatchCard.data  MatchCard.js  MatchCard.wasm  build.bat  index.html
